# file2ofx

./: .cursorrules  .gitignore  .~lock._.Transaction History - CYBER-MINT (PTY) LTD_31000436913.csv#  .~lock._.Transaction History - CYBER-MINT (PTY) LTD_31000436913.xls#  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: DEVELOPER.md
scripts/: example_temp_files.py  generate_test_data.py  test_completion.py
src/file2ofx/: __init__.py  cli.py
src/file2ofx/core/: __init__.py  detector.py  ofx_generator.py  parser.py
src/file2ofx/utils/: __init__.py  file_utils.py
test_data/: bankfile.cols  example_bank_statement.csv  example_transactions.csv
tests/: __init__.py  test_detector.py  test_file_utils.py  test_integration.py
